# pde

./: .gitignore  Brewfile  Brewfile.macOS  Cargo.toml  README.md  bootstrap.sh  install.sh
.github/workflows/: docker-images.yml
alacritty/: alacritty.toml  theme.toml
btop/: btop.conf
docker/: Dockerfile.complete  Dockerfile.flutter  Dockerfile.flutter.dockerignore  Dockerfile.pants-python  Dockerfile.python-pants-dev  Dockerfile.remote  Dockerfile.remote.dockerignore  Dockerfile.rust
docker/pde/: entrypoint.sh  install-common-tools.sh  install.sh  zshrc
ghostty/: config  theme
k9s/skins/: dotfiles.yaml
kitty/: kitty.conf  theme.conf
lazygit/: config.shared.yml  config.yml
nvim/: lazy-lock.json
nvim/lua/config/: buffers.lua  keymaps.lua  options.lua  (+6 more)
pde_tui/: ARCHITECTURE.md  Cargo.toml
pde_tui/src/: app.rs  cli.rs  main.rs  tui.rs
pde_tui/src/features/: mod.rs
pde_tui/src/features/create_project/: actions.rs  help.rs  interaction.rs  mod.rs  navigation.rs  persistence.rs  presets.rs  ui.rs
pde_tui/src/features/workspace/: accessors.rs  actions.rs  data.rs  input.rs  lifecycle.rs  mod.rs  selection.rs  ui.rs
pde_tui/src/shared/: mod.rs  process.rs  root.rs  selection.rs
pde_tui/src/shared/ui/: theme.rs
presets/allc/: Brewfile  Brewfile.macOS  install.sh
presets/default/: install.sh
themes/: README.md  neon-cyberpunk.sh  synthwave-84.sh
tmux/: .tmux.conf  theme.conf
zellij/: config.kdl
zellij/layouts/: config.kdl  pde.kdl
zellij/themes/: dotfiles.kdl
zsh/: .zshrc
zsh/shell/: aliases.zsh  env.zsh  functions.zsh  theme.zsh
(+55 files in other folders)
